--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 p {
-	padding: 10px;
+	padding: 15px;
 	margin: 0;
 }
 
@@ -35,7 +35,7 @@ section {
 	width: 100%;
 	height: auto;
 	font-family: Helvetica;
-	color: black;
+	color: green;
 	position: relative;
 	overflow: auto;
 }
@@ -51,7 +51,7 @@ section {
 	margin-bottom: 0;
 	margin-top: 0;
 	padding: 5px;
-	background-color: #FFFF00;
+	background-color: #0000ff;
 }
 
 #beef {
@@ -65,7 +65,7 @@ section {
 	margin-bottom: 0;
 	margin-top: 0;
 	padding: 5px;
-	background-color: #FF1439;
+	background-color: #0000ff;
 }
 
 #sushi {
